<resources>
    <string name="app_name">GetBooks</string>
    <string name="list_of_allbooks">List of All Books</string>
    <string name="title">Title:</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="book_details">Book Details</string>
    <string name="search_book">Search Book</string>
    <string name="update_book_details">Update Book Details</string>
    <string name="isbn">ISBN:</string>
    <string name="author">Author:</string>
    <string name="stock">Stock:</string>
    <string name="price">Price:</string>
    <string name="category">Category:</string>
    <string name="edit">Edit</string>
    <string name="ip_address">IP Address</string>
    <string name="update">Update</string>
    <string name="title_hint">Title</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
</resources>
